force-app/main/default/objects/Session_Slot__c/Session_Slot__c.object-meta.xml
<CustomObject>
    <label>Session Slot</label>
    <nameField>
        <displayFormat>SESH-{YY}{00}</displayFormat>
        <label>Session Slot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Session Slots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>