force-app/main/default/objects/Session_Slot__c/fields/Draft__c.field-meta.xml
<CustomField>
    <fullName>Draft__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this is a draft Session Slot - not yet finalized. Used by the scheduling agent to build draft schedules before committing.</description>
    <label>Draft</label>
    <type>Checkbox</type>
</CustomField>