force-app/main/default/objects/Session_Slot__c/fields/Session_Location__c.field-meta.xml
<CustomField>
    <fullName>Session_Location__c</fullName>
    <label>Session Location</label>
    <referenceTo>Session_Location__c</referenceTo>
    <relationshipLabel>Session Slots</relationshipLabel>
    <relationshipName>Session_Slots</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>